<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp">

    <!-- título + autor -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_item_tituloCancion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_predeterminado_item_titulo"
            android:textSize="16sp"
            android:maxLines="1"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/tv_item_artistaCancion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_predeterminado_item_artista"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            android:maxLines="1"
            android:ellipsize="end"/>

    </LinearLayout>

    <!-- tiempo canción -->
    <TextView
        android:id="@+id/tv_item_tiempoCancion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_predeterminado_tiempo"
        android:textSize="14sp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="16dp"/>

</LinearLayout>